src/index.css
@import url('https://fonts.cdnfonts.com/css/alliance-no1');

* {

  font-family: 'Alliance No.1', sans-serif;
}

body {
  margin: 0;
  padding: 0;
}

.app {
  background-color: var(--background-color);
  color: var(--text-color);
  display: flex;
}






/* sidebar */

.side-bar {
  background-color: var(--background-color);
  min-height: 100vh; /* change height to min-height */
  width: 244px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  color: var(--text-color);
  text-align: center;
  border-right: 1px solid var(--main-color);
  z-index: 998;
  position: relative;
  overflow-y: auto; /* add this line */
}

button {
  border: solid 0.5px var(--main-color);
  background-color: var(--background-color);
  border-radius: none;
  padding: 10px;
  margin: 10px;
  color: var(--main-color);
  cursor: pointer;
}

button:hover {
  background-color: var(--secondary-color);
  color: var(--background-color);
  border-color: var(--background-color);
}

.toggle-sidebar {
  position: fixed;
  top: calc(50vh - 50px);
  z-index: 999;
  left: 0;
  transform: translateY(-50%);
  background-color: var(--background-color);
  border: none;
  color: var(--main-color);
  padding: 10px;
  margin: 0;
  font-size: 14px;
  cursor: pointer;
  transition: left 0.3s ease-in-out;
}

.hidden {
  display: none;
}

nav {
  border-top: solid 0.5px rgba(255, 255, 255, 0.5);
  padding: 10px;
  margin: 10px;
}

.history {
  padding: 10px;
  margin: 10px;
  height: 100%;
}

.history li {
  list-style: none;
  padding: 15px 0;
  cursor: pointer;
}

.settings {
  padding: 10px;
}

.prompt-selection {
  margin: 10px 0px;
}

/*.model-selection select, option {
  color: black;
  margin-bottom: 20px;
}*/

.model-button {
  margin-right: 10px;
  cursor: pointer;
}

.model-button.selected {
  background-color: var(--main-color);
  color: var(--background-color);
}

.active-button {
  background-color: var(--main-color);
  color: var(--background-color);
}

.slider-container {
  display: flex;
  flex-direction: column;
  margin-bottom: 20px;
  width: 85%;
}

.slider-container:last-child {
  margin-bottom: 0;
}

.slider-container input[type='number'] {
  width: 100%;
  margin-top: 5px;
  color: var(--text-color);
}

.slider-container label {
  margin-bottom: 5px;
}

.slider-container #max-tokens, #temperature {
  box-shadow: none;
}

.sliders::-webkit-slider-runnable-track {
  width: 100%;
  height: 5px;
  border-radius: 5px;
  background: var(--secondary-color);
}

.sliders::-webkit-slider-thumb {
  -webkit-appearance: none;
    height: 25px;  /* height of the rectangle */
    width: 10px;  /* width of the rectangle */
    background: #ffffff;
    border: 2px solid #000000;
    margin-top: -10px;
}

.sliders::-webkit-slider-thumb:hover {
  background: var(--main-color);
}

.slider-container [type=range] {
  -webkit-appearance: none;
  width: 100%;
  background-color: var(--background-color);
}

dialog {
  background-color: var(--alt-color);
}










/* main section*/

.main {
  height: 100vh;
  width: 100%;
  overflow-x: hidden;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  text-align: center;
  min-width: calc(100% - 244px);
  position: relative;
  left: 0;
}

h1, h2, li, ul, ol {
  color:  var(--text-color);
}

.info {
  color: rgba(255, 255, 255, 0.5);
  font-size: 11px;
  padding: 10px;
}

.bottom-section {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.input-container {
  position: relative;
  width: 60vw;
  max-width: 650px;
  margin-bottom: 16px;
  color: var(--text-color);
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.input-container:nth-child(2) {
  margin-bottom: 0; /* Reset the margin-bottom for the second input container */
}

input {
  width: 100%;
  border: none;
  font-size: 20px;
  background-color: var(--alt-color);
  padding: 12px 15px;
  border-radius: 5px;
  box-shadow: rgba(0, 0, 0, 0.05) 0px 54px 55px,
      rgba(0, 0, 0, 0.05) 0px -12px 30px,
      rgba(0, 0, 0, 0.05) 0px 4px 6px,
      rgba(0, 0, 0, 0.05) 0px 12px 3px,
      rgba(0, 0, 0, 0.05) 0px -3px 5px;
}

input:focus {
  outline: none;
}

label {
  color: var(--main-color);
}

textarea {
  width: 60vw;
  max-width: 650px;
  border: none;
  font-size: 20px;
  background-color: var(--alt-color);
  padding: 12px 15px;
  border-radius: 5px;
  box-shadow: rgba(0, 0, 0, 0.05) 0px 54px 55px,
      rgba(0, 0, 0, 0.05) 0px -12px 30px,
      rgba(0, 0, 0, 0.05) 0px 4px 6px,
      rgba(0, 0, 0, 0.05) 0px 12px 3px,
      rgba(0, 0, 0, 0.05) 0px -3px 5px;
  resize: none;
  overflow: auto;
  color: var(--text-color);
}

textarea:focus {
  outline: none;
}

textarea::-webkit-scrollbar {
  display: none;
}

#submit {
  position: absolute;
  bottom: -10px;
  right: 0;
  cursor: pointer;
  background-color: var(--main-color);
  color: var(--background-color);
}

#submit:hover {
  background-color: var(--secondary-color);
}







/* chat feed */

.feed {
  overflow-y: scroll;
  overflow-x: auto;
  width: 60vw;
  padding: 0;
  color: var(--text-color);
}

.feed::-webkit-scrollbar {
  width: 0;
}

.feed li {
  display: flex;
  flex-direction: column; /* Change this to column so that title-bar and content stack vertically */
  background-color: var(--alt-color);
  /*width: 80rem;*/
  padding: 0px;
  margin: 20px 20px; /* Add auto to left and right margins */
  -ms-overflow-style: none;
  scrollbar-width: none;
  box-shadow: rgba(0, 0, 0, 0.05) 0px 54px 55px,
      rgba(0, 0, 0, 0.05) 0px -12px 30px,
      rgba(0, 0, 0, 0.05) 0px 4px 6px,
      rgba(0, 0, 0, 0.05) 0px 12px 3px,
      rgba(0, 0, 0, 0.05) 0px -3px 5px;
}


.feed p {
  color: var(--text-color);
  font-size: 20px;
  text-align: left;
  word-wrap: normal;
  white-space: pre-wrap;
  padding: 10px;
}

.feed p.role {
  min-width: 100px;
  color: var(--background-color);
}

.title-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 30px;
  background-color: var(--main-color);
  padding: 10px;
  color: var(--background-color);
}

.audio-button {
  background: none;
  border: none;
  color: #fff;
  cursor: pointer;
}

.delete-button {
  background: none;
  color: #fff;
  border: none;
}

.ai-audio-button {
  background: var(--secondary-color);
  color: #fff;
  border: none;
}

.ai-audio-button:hover {
  background: var(--main-color);
}

.ai-delete-button {
  background-color: var(--secondary-color);
  border: none;
  color: #fff;
}

.ai-delete-button:hover {
  background-color: var(--main-color);
}

#ai-message {
  background-color: var(--background-color);
  color: var(--secondary-color) !important;
  box-shadow: none;
}

#ai-message .react-markdown p {
  color: var(--secondary-color);
}

.ai-title-bar {
  background-color: var(--secondary-color);
  color: var(--secondary-color);
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 30px;
  padding: 10px;
}

.loading-message {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}




/* Markdown styles */
.react-markdown {
  text-align: left;
}

.react-markdown li {
  display: list-item;
}

/* Code blocks */
.react-markdown code {
  background-color: rgba(27, 31, 35, 0.05);
  border-radius: 3px;
  font-size: 85%;
  margin: 0;
  padding: 0.2em 0.4em;
  white-space: pre-wrap;
}

.react-markdown pre {
  background-color: rgba(27, 31, 35, 0.05);
  border-radius: 3px;
  font-size: 85%;
  line-height: 1.45;
  overflow: auto;
  padding: 16px;
  white-space: pre-wrap;
}

/* Inline code */
.react-markdown pre code {
  background-color: transparent;
  border: none;
  padding: 0;
}

/* Syntax highlighting */
.syntax-highlighter {
  font-size: 14px;
}

/* export to pdf */

@media print {
  .side-bar, .bottom-section  {
    display: none;
  }
  #chatfeed {
    height: auto !important;
    overflow: visible !important;
  }
}


/* mobile settings */

@media (max-width: 1030px) {
  .input-container {
    width: 90vw;
  }

  textarea {
    width: 90vw;
  }

  .feed {
    width: 90vw;
  }

  .info {
    display: none;
  }

  .header {
    margin: 5px;
  }
}

